--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <div class="menu">
         <div class="opciones">
-            <h2><a href="Index.html">Inicio</a></h2>
+            <h2><a href="index.html">Inicio</a></h2>
             <script src="JS/detalles.js"></script>
             <h2 class="desplega">Prácticas </h2>
             <h2 id="contactanos-link">Contáctanos</h2>
