--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h2><a href="index.html">Inicio</a></h2>
             <script src="JS/detalles.js"></script>
             <h2 class="desplega">Prácticas </h2>
-            <h2 id="Contactanos.html">Contáctanos</h2>
+            <h2 id="contactanos-link">Contáctanos</h2>
 
         </div>
 
